# nima

./: .coveragerc  .cruft.json  .envrc  .flake8  .flake8rc  .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  .readthedocs.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  IMPLEMENTATION_SUMMARY.md  LICENSE  LICENSE.txt  Makefile  QUICK_REFERENCE_d_mask_label.md  README.md  README.rst  XARRAY_IMPLEMENTATION.md  XARRAY_MASK_LABEL_IMPLEMENTATION.md  cliff.toml  dev-requirements.txt  flat_bg_dask.ipynb  freeze-0.1.0  freeze-0.2.2  noxfile.py  pyproject.toml  refactor_io_plan.md  renovate.json  renovate.tmp.json  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  simulate_bg.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  constraints.txt  cruft-update.yml  docs.yml  lockfile-update.yml  release.yml  tests.yml
benchmarks/: benchmark_dask.py
docs/: AUTHORS.md  Makefile  README.md  click.rst  conf.py  index.rst  installation.rst  make.bat  nimg.rst  reference.rst  requirements.txt  usage.rst
docs/api/: api.rst
docs/references/: dask_performance.md  development.rst  references.rst
docs/tutorials/: Untitled.ipynb  dev_xr_hvplot_holoviews.ipynb  flat_bg_dask.ipynb  holoviews.ipynb  ratioing.ipynb  tutorials.rst  usage.ipynb  xr_hvplot.ipynb
examples/: MN_10x.ipynb.REMOVED.git-id  holoview.ipynb.REMOVED.git-id  image-Copy1.ipynb.REMOVED.git-id  image0.ipynb.REMOVED.git-id  test_xarray_mask_label.py
nimg/: __init__.py  dark.py  nimg.py  scripts.py
src/nima/: __main__.py  generat.py  io.py  nima.py  nima_types.py  scripts.py  segmentation.py  types.py  utils.py
src/nimg/: __init__.py  __main__.py  nimg.py  scripts.py
tests/: __init__.py  conftest.py  test.py  test_cli.py  test_d_ratio.py  test_generat.py  test_nima.py  test_nimg.py  test_scripts.py  test_segmentation.py  test_utils.py
tests/data/: 1b_c16_15.tif.REMOVED.git-id  test_flat0.tif  test_flat1.tif  test_flat2.tif
tests/data/output/: test_flat.tif  test_flat_gaussnorm.tif
tests/data/output/1b_c16_15/: bg.csv  label1.csv  label1_rcl.tif  label1_rpH.tif  label2.csv  label2_rcl.tif  label2_rpH.tif  label3.csv  label3_rcl.tif  label3_rpH.tif
