[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {name = "daniele arosio", email = "daniele.arosio@cnr.it"}
]
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Unix Shell",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Development Status :: 2 - Pre-Alpha"
]
dependencies = [
  "bioio-tifffile <=1.1.0",
  "click <= 8.1.8",
  "dask[distributed] <=2025.4.1",
  "matplotlib <= 3.10.1",
  "numpy <=2.2.5",
  "pandas <= 2.2.3",
  "pims <= 0.7",
  "pyarrow <= 19.0.1",
  "s3fs <= 2025.3.2",
  "scikit-image <= 0.25.2",
  "scipy <= 1.15.2",
  "sigfig <= 1.3.19",
  "tifffile <= 2025.3.30",  # changed >2019.7.2 an OME recognition check and "IYX" -> "TCYX"
  "xmltodict <= 0.14.2"
]
description = "Numerical IMage Analyses."
keywords = ["ClopHensor", "ratio imaging", "image analysis", "chloride", "pH"]
license = "BSD-3-Clause"
name = "nima"
readme = "README.md"
requires-python = ">=3.11"
version = "0.10.2"

[project.optional-dependencies]
dev = [
  "commitizen <=4.6.3",
  "ipykernel",
  "jupyter",
  "jupyterlab",
  "pre-commit <= 4.2.0",
  "pylsp-mypy",
  "pympler",
  "ruff <=0.11.8",
  "ruff-lsp",
  "urllib3"
]
docs = [
  "autodocsumm <= 0.2.14",
  "bokeh",
  "dask_image",
  "holoviews",
  "hvplot",
  "impy-array",
  "nbsphinx <= 0.9.7",
  "pydata-sphinx-theme <= 0.16.1",
  "pygments <= 2.19.1",
  "seaborn",
  "selenium",
  "sphinx == 8.2.3",
  "sphinx-click <= 6.0.0",
  "sphinx_autodoc_typehints == 3.1.0",
  "statsmodels"
]
tests = [
  "coverage[toml] <= 7.8.0",
  "mypy <= 1.15.0",
  "pandas-stubs <= 2.2.3.250308",
  "pygments <= 2.19.1",  # color xdoctest
  "pypdf <= 5.4.0",
  "pytest <= 8.3.5",
  "xdoctest <= 1.2.0"
]

[project.scripts]
bima = "nima.__main__:bima"
# nima = "nima.scripts:main"
nima = "nima.__main__:main"

[project.urls]
"Bug Tracker" = "https://github.com/darosio/nima/issues"
Changelog = "https://github.com/darosio/nima/blob/main/CHANGELOG.md"
# Discussions = "https://github.com/darosio/nima/discussions"
Documentation = "https://nima.readthedocs.io"
"Github releases" = "https://github.com/darosio/nima/releases"
Homepage = "https://github.com/darosio/nima"
repository = "https://github.com/darosio/nima/"

[tool.commitizen]
name = "cz_customize"
tag_format = "v$version"
version = "0.10.2"
version_files = [
  "pyproject.toml:version",
  "docs/conf.py:release",
  "README.md:Version"
]

[tool.commitizen.customize]
bump_map = {"^.+!:" = "MAJOR", "BREAKING CHANGE" = "MAJOR", "feat" = "MINOR", "fix" = "PATCH", "perf" = "PATCH", "refactor" = "PATCH"}
bump_pattern = "^(BREAKING CHANGE|feat|fix|perf|refactor)"
change_type_map = {"feat" = "Feat", "fix" = "Fix", "docs" = "Docs", "build" = "Build", "style" = "Style", "refactor" = "Refactor", "perf" = "Perf", "test" = "Test", "ci" = "CI/CD"}
change_type_order = ["BREAKING CHANGE", "Feat", "Fix", "Docs", "Style", "Perf", "Test", "Build", "CI/CD"]
changelog_pattern = "^(feat|fix|docs|style|refactor|perf|test|build|ci)?(\\(.*\\))?(!)?"
commit_parser = "^(?P<change_type>feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert)(?:\\((?P<scope>[^()\r\n]*)\\)|\\()?(?P<breaking>!)?:\\s(?P<message>.*)?"
example = """fix(parser): correct minor typos in code\n
see the issue for details on the typos fixed\n
closes issue #12
"""
info_path = "cz_customize_info.txt"
message_template = "{{change_type}}:{% if show_message %} {{message}}{% endif %}"
schema = """
<type>(<scope>): <subject>
<BLANK LINE>
<body>
<BLANK LINE>
(BREAKING CHANGE: )<footer>
"""
schema_pattern = "^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert|bump)(?:\\(([^()\r\n]*)\\)|\\()?(!)?:\\s(.*)?"

[[tool.commitizen.customize.questions]]
choices = [
  {value = "feat", name = "feat: A new feature. Correlates with MINOR in SemVer"},
  {value = "fix", name = "fix: A bug fix. Correlates with PATCH in SemVer"},
  {value = "perf", name = "perf: A code change that improves performance. Correlates with PATCH in SemVer"},
  {value = "docs", name = "docs: Documentation only changes"},
  {value = "style", name = "style: Changes that do not affect the meaning of the code (white-space, formatting, missing semi-colons, etc)"},
  {value = "refactor", name = "refactor: A code change that neither fixes a bug nor adds a feature"},
  {value = "test", name = "test: Adding missing or correcting existing tests"},
  {value = "build", name = "build: Changes that update the build system, development tools or external dependencies"},
  {value = "ci", name = "ci: Changes to our CI configuration files and scripts (example scopes: GitLabCI)"},
  {value = "revert", name = "revert: Reverting to previous commit(s)."}
]
message = "Select the type of change you are committing"
name = "change_type"
type = "list"

[[tool.commitizen.customize.questions]]
message = "Body."
name = "message"
type = "input"

[[tool.commitizen.customize.questions]]
message = "Do you want to add body message in commit?"
name = "show_message"
type = "confirm"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.report]
# fail_under = 100
exclude_lines = [
  "pragma: no cover"
]
show_missing = true

[tool.coverage.run]
branch = true
omit = ["*__init__.py"]
source = ["nima", "tests"]

[tool.hatch.envs.default]
features = ["dev", "tests", "docs"]
installer = "uv"

[tool.hatch.envs.default.scripts]
bump = [
  "cz bump --major-version-zero -ch {args}",  # e.g. "--increment PATCH"
  "hatch build",
  "export TEST_PYPI_TOKEN=$(pass show cloud/test_pypi | head -n 1) && hatch publish -r test -u __token__ -a $TEST_PYPI_TOKEN"
]
ch = "cz ch --incremental --unreleased-version HEAD"
clean = "rm -rf ./build .coverage ./__pycache__ ./.mypy_cache ./.pytest_cache ./docs/_build ./tests/__pycache__ ./dist ./src/nima/__pycache__"
docs = "sphinx-build docs docs/_build"
docserve = "python -m http.server 8000 -d docs/_build"
init = [
  "pre-commit --version",
  "pre-commit install",
  "pre-commit install --hook-type commit-msg --hook-type pre-push"
]
lint = [
  "pre-commit --version",
  "pre-commit run --all-files --show-diff-on-failure {args}"
]

[tool.hatch.envs.tests]
features = ["tests"]
installer = "uv"
template = "tests"

[[tool.hatch.envs.tests.matrix]]
python = ["3.13", "3.12", "3.11"]  # reverse order to ensure the presence in older python of module included in newer versions

[tool.hatch.envs.tests.scripts]
all = ["test", "type", "xdoc", "cov"]
cov = [
  "coverage combine",
  "coverage report",
  "coverage xml"
]
test = "coverage run -p -m pytest -v"
type = "mypy src tests docs/conf.py"
xdoc = "python -m xdoctest nima all"

[tool.isort]
combine_as_imports = true
force_single_line = false
include_trailing_comma = true
known_first_party = "nima"
line_length = 88  # to match black's default line length
multi_line_output = 3
profile = "black"

[tool.mypy]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
plugins = ["numpy.typing.mypy_plugin"]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true
warn_unused_configs = true

[tool.pylsp-mypy]
dmypy = false
enabled = true
live_mode = true
strict = true

[tool.ruff]
extend-include = ["*.ipynb"]
force-exclude = true
line-length = 88
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = [
  "ISC001",
  "S311"  # Standard pseudo-random generators are not suitable for cryptographic purposes
]
select = [
  "A",  # builtins
  "ANN",  # typing annotation
  "ARG",  # unused arguments
  "B",  # bugbear
  "BLE",  # blind-except
  "C",
  "C4",  # comprehensions
  "C90",  # mccabe
  "D",  # pydocstyle
  "DTZ",  # dates
  "E",  # pycodestyle
  "TRY",  # exceptions
  "EM",  # exceptions
  "ERA",  # eradicate
  "F",  # pyflakes
  "FBT",  # boolean-trap
  "FLY",  # flyntp
  "FURB",  # refurbishing and modernizing
  "I",  # isort
  "ICN",  # import conventions (opinionated)
  "ISC",  # implicit-str-concat
  "N",  # pep8-naming
  "NPY",
  "AIR",  # airflow
  "PERF",  # pperformance anti pattern
  "PD",  # pandas-vet
  "PGH",  # pygrep WAIT
  "PL",  # pylint see PLR2004...
  "PT",  # pytest-style
  "PTH",  # use-pathlib
  "Q",  # quotes
  "RET",  # Return
  "RSE",  # Raise
  "RUF",  # Ruff
  "S",  # bandit
  "SLF",  # private self
  "SLOT",  # __slot__
  "SIM",  # simplify
  "TID",  # tidy-imports
  "TCH",  # TYPE_CHECKING
  "TRY",  # tryceratops
  # "TD",  # TODOs
  # "FIX",  #
  "UP",  # pyupgrade
  "YTT",  # 2020
  "W"  # pycodestyle
]
isort.combine-as-imports = true
isort.force-single-line = false
isort.known-first-party = ["nima"]
isort.split-on-trailing-comma = true
mccabe.max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["ANN001", "ANN201", "D103", "ERA", "PD901", "PD013", "E501", "PLR2004", "SLF"]
"tests/*" = ["PLR2004", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.typos]

[tool.typos.default]
# Ignore specific patterns such as "id": "XXXX" in JSON
extend-ignore-re = ["\"id\":\\s*\"[^\"]+\""]

[tool.typos.default.extend-words]
ND = "ND"
Nd = "Nd"
OME = "OME"
arange = "arange"
arosio = "Arosio"
generat = "generat"
thr = "thr"
