[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  { name = "daniele arosio", email = "daniele.arosio@cnr.it" },
]
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Unix Shell",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
  "bioio-tifffile>=1.3.0",
  "click>=8.2.1",
  "dask[distributed]>=2025.7.0",
  "matplotlib>=3.10.6",
  "numpy>=2.3.2",
  "pandas>=2.3.2",
  "pims>=0.7",
  "pyarrow>=21.0.0",
  "s3fs>=2025.9.0",
  "scikit-image>=0.25.2",
  "scipy>=1.16.1",
  "sigfig>=1.3.19",
  "tifffile>=2025.8.28", # changed >2019.7.2 an OME recognition check and "IYX" -> "TCYX"
  "xmltodict>=0.15.1",
]
description = "Numerical IMage Analyses."
keywords = ["ClopHensor", "ratio imaging", "image analysis", "chloride", "pH"]
license = "BSD-3-Clause"
name = "nima"
readme = "README.md"
requires-python = ">=3.11"
version = "0.11.4"

[project.optional-dependencies]
dev = [
  "git-cliff==2.10.0",
  "mdformat==0.7.22",
  "mdformat-gfm==0.4.1",
  "pylsp-mypy==0.7.0",
  "ruff==0.12.12",
  "python-lsp-ruff==2.2.2",
]
docs = [
  "autodocsumm==0.2.14",
  "bokeh==3.7.3",
  "dask-image==2024.5.3",
  "holoviews==1.21.0",
  "hvplot==0.12.1",
  "impy-array==2.4.10",
  "ipykernel==6.30.1",
  "jupyter==1.1.1",
  "nbsphinx==0.9.7",
  "pydata-sphinx-theme==0.16.1",
  "pygments==2.19.2",
  "pympler==1.1",
  "seaborn==0.13.2",
  "selenium==4.35.0",
  "sphinx-autodoc-typehints<3.2", # TODO: wait nbsphinx
  "sphinx-click==6.0.0",
  "sphinx<8.2", # TODO: wait nbsphinx
  "statsmodels==0.14.5",
]
lint = [
  "pre-commit==4.3.0",
]
tests = [
  "coverage[toml]>=7.10.6",
  "mypy>=1.17.1",
  "pandas-stubs>=2.3.2.250827",
  "pygments>=2.19.2", # color xdoctest
  "pypdf>=6.0.0",
  "pytest>=8.4.2",
  "xdoctest>=1.2.0",
]
hatch = [
  "hatch==1.14.1",
]

[project.scripts]
bima = "nima.__main__:bima"
# nima = "nima.scripts:main"
nima = "nima.__main__:main"

[project.urls]
"Bug Tracker" = "https://github.com/darosio/nima/issues"
Changelog = "https://github.com/darosio/nima/blob/main/CHANGELOG.md"
# Discussions = "https://github.com/darosio/nima/discussions"
Documentation = "https://nima.readthedocs.io"
"Github releases" = "https://github.com/darosio/nima/releases"
Homepage = "https://github.com/darosio/nima"
repository = "https://github.com/darosio/nima/"

# version_files = [
#   "pyproject.toml:version",
#   "docs/conf.py:release",
#   "README.md:Version",
# ]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.report]
# fail_under = 100
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
omit = ["*/__init__.py"]
source = ["nima"]

[tool.hatch.envs.default]
features = ["dev", "docs", "lint", "tests"] # separate docs and lint
installer = "uv"
path = ".venv"

[tool.hatch.envs.default.scripts]
ch = "git cliff --bump --unreleased --prepend CHANGELOG.md"
bump = """
NEXT_VERSION=$(git cliff --bumped-version)
uv version $NEXT_VERSION
uv sync --all-extras
git add .
git commit -m "chore: release $NEXT_VERSION"
git tag $NEXT_VERSION
git push
git push --tags
"""
clean = "rm -rf ./build .coverage ./__pycache__ ./.mypy_cache ./.pytest_cache ./docs/_build ./tests/__pycache__ ./dist ./src/nima/__pycache__"

[tool.hatch.envs.docs]
type = "virtual"
features = ["docs"]
installer = "uv"

[tool.hatch.envs.docs.scripts]
build = "sphinx-build docs docs/_build"
serve = "python -m http.server 8000 -d docs/_build"

[tool.hatch.envs.lint]
type = "virtual"
features = ["lint"]
installer = "uv"

[tool.hatch.envs.lint.scripts]
init = "pre-commit install"
lint = "pre-commit run --all-files --show-diff-on-failure {args}"

[tool.hatch.envs.tests]
type = "virtual"
features = ["tests"]
installer = "uv"
matrix = [{ python = ["3.13", "3.12", "3.11"] }]
template = "tests" #built-in test template

[tool.hatch.envs.tests.scripts]
all = ["test", "type", "xdoc", "cov"]
cov = "coverage combine && coverage report && coverage xml"
test = "coverage run -p -m pytest -v"
type = "mypy src tests docs/conf.py"
xdoc = "python -m xdoctest nima all"

[tool.isort]
combine_as_imports = true
force_single_line = false
include_trailing_comma = true
known_first_party = "nima"
line_length = 88 # to match black's default line length
multi_line_output = 3
profile = "black"

[tool.mypy]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true
warn_unused_configs = true

[tool.pylsp-mypy]
dmypy = false
enabled = true
live_mode = true
strict = true

[tool.ruff]
extend-include = ["*.ipynb"]
fix = true
force-exclude = true
line-length = 88
target-version = "py311"
unsafe-fixes = true
# Enable preview mode
preview = false

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
# S311 Standard pseudo-random generators are not suitable for cryptographic purposes
ignore = ["COM", "CPY", "ISC001", "S311", "T20"]
select = [
  "A", # builtins
  "AIR", # airflow
  "ANN", # typing annotation
  "ARG", # unused arguments
  "ASYNC",
  "B", # bugbear
  "BLE", # blind-except
  "C",
  "C4", # comprehensions
  "C90", # mccabe
  "D", # pydocstyle
  "DOC",
  "DTZ", # dates
  "E", # pycodestyle
  "EM", # exceptions
  "ERA", # eradicate
  "EXE",
  "F", # pyflakes
  "FA", # future annotations
  "FBT", # boolean-trap
  "FLY", # flyntp
  "FURB", # refurbishing and modernizing
  "G", # logging
  "I", # isort
  "ICN", # import conventions (opinionated)
  "INP", #inplict namespace
  "INT", #gettext
  "ISC", # implicit-str-concat
  "LOG", # logging
  "N", # pep8-naming
  "NPY",
  "PD", # pandas-vet
  "PERF", # pperformance anti pattern
  "PGH", # pygrep WAIT
  "PIE",
  "PL", # pylint see PLR2004...
  "PT", # pytest-style
  "PTH", # use-pathlib
  "PYI", #lint typeshed
  "Q", # quotes
  "RET", # Return
  "RSE", # Raise
  "RUF", # Ruff
  "S", # bandit
  "SIM", # simplify
  "SLF", # private self
  "SLOT", # __slot__
  "T10", # debugger
  "T20", # print
  "TC", # TYPE_CHECKING
  "TCH", # TYPE_CHECKING
  "TID", # tidy-imports
  "TRY", # tryceratops
  "UP", # pyupgrade
  "W", # pycodestyle
  "YTT", # 2020
]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["nima"]
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["ANN001", "ANN201", "D103", "ERA", "PD901", "PD013", "E501", "PLR2004", "SLF", "T20"]
"tests/*" = ["PLR2004", "S101"]
"docs/*" = ["INP"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.typos]

[tool.typos.default]
# Ignore specific patterns such as "id": "XXXX" in JSON
extend-ignore-re = ["\"id\":\\s*\"[^\"]+\""]

[tool.typos.default.extend-words]
ND = "ND"
Nd = "Nd"
OME = "OME"
arange = "arange"
arosio = "Arosio"
generat = "generat"
thr = "thr"
